[package]
name = "roman_numeral"
version = "0.1.0"
authors = ["Jakub <jakub.jantosik@gmail.com>"]
license = "MIT"
edition = "2018"
description = "Rust library for roman numerals. Encode/decode roman numerals with ease!"
readme = "README.md"
homepage = "https://github.com/jammymalina/roman_numeral/"
repository = "https://github.com/jammymalina/roman_numeral/"

[dependencies]
